<resources>
    <string name="app_name">云升</string>
    <string name="app_slogan">Cloud Light</string>
    <string name="title_home">消息</string>
    <string name="title_contact">联系人</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="invalid_username">用户名为3位以上字母与数字</string>
    <string name="invalid_password">密码至少为8位</string>
    <string name="inconsistent_password">前后密码不一致！</string>
    <string name="login_success">登录成功</string>
    <string name="sign_up_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="empty_nickname">起个有意思的昵称吧！</string>
    <string name="login_failed_wrong_username">用户不存在！</string>
    <string name="login_failed_wrong_password">密码错误！</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="select">已选中</string>
    <string name="title_activity_welcome">欢迎</string>
    <string name="not_logged_in">未登录</string>
    <string name="please_log_in">请登录</string>
    <string name="Login">登录</string>
    <string name="sign_up">注册</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="prompt_nickname">显示名称</string>
    <string name="sign_up_failed">注册失败</string>
    <string name="user_already_exists">用户名已被占用！</string>
    <string name="search_hint">按用户信息搜索…</string>
    <string name="make_friends_success">成功添加好友</string>
    <string name="send_message">发消息</string>
    <string name="make_friends">加好友</string>
    <string name="fail">失败</string>
    <string name="logout">退出登录</string>
    <string name="exit">退出</string>
    <string name="avatar">头像</string>
    <string name="signature">个人简介</string>
    <string name="my_profile_title">个人信息</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_hint">输入内容…</string>
    <string name="set_nickname">设置昵称</string>
    <string name="no_image_selected">没有选择图片</string>
    <string name="avatar_change_success">更换成功</string>
    <string name="username2">账号</string>
    <string name="gender">性别</string>
    <string name="choose_gender">选择性别</string>
    <string name="choose_word_cloud_permission">选择词云隐私类型</string>
    <string name="send">发送</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="choose_signature">我想说</string>
    <string name="attention_please">提示</string>
    <string name="need_that_freaking_notification_permission">为确保消息的高调到达，请开启悬浮通知权限</string>
    <string name="relation_title">好友设置</string>
    <string name="prompt_set_remark">设置好友备注</string>
    <string name="add_into_blacklist">加入黑名单</string>
    <string name="delete_friend">删除好友</string>
    <string name="prompt_set_group">设置好友分组</string>
    <string name="prompt_user_word_cloud">用户词云</string>
    <string name="place_holder_no_signature">这个人很佛系，啥都没写</string>
    <string name="color">颜色</string>
    <string name="fetch_failed">获取失败</string>
    <string name="no_contact">没有联系人</string>
    <string name="no_conversation">没有会话</string>
    <string name="date_format_1">yyyy年M月d日</string>
    <string name="date_format_3">yyyy年M月d日 hh时mm分</string>
    <string name="date_format_2">M月d日</string>
    <string name="date_format_am">上午hh:mm</string>
    <string name="date_format_pm">下午hh:mm</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="date_format_with_prefix">"%s %s"</string>
    <string name="view_history">查看聊天记录</string>
    <string name="chat_word_cloud">查看我们的词云</string>
    <string name="title_conversation">聊天信息</string>
    <string name="with_you">和你聊天</string>
    <string name="with_other">和别人聊天</string>
    <string name="place_holder_yunmoji">[表情]</string>
    <string name="title_relation_event">好友事件</string>
    <string name="send_request_success">好友申请已发送</string>
    <string name="relation_requesting">等待同意</string>
    <string name="relation_rejected">拒绝</string>
    <string name="relation_accepted">已同意</string>
    <string name="relation_delete">把你删了</string>
    <string name="prompt_accept">同意</string>
    <string name="select_action">选择操作</string>
    <string name="prompt_reject">拒绝</string>
    <string name="prompt_select_action">操作</string>
    <string name="label_user_profile">用户信息</string>
    <string name="label_relation_settings">好友选项</string>
    <string name="attention_delete_friend">确定要结束这段友谊吗？</string>
    <string name="delete_friend_success">已删除好友</string>
    <string name="relation_you_deleted">你删了TA</string>
    <string name="menu_my_profile">我的资料</string>
    <string name="menu_setting">设置</string>
    <string name="hint_sensitive_message">*或包含敏感内容*</string>
    <string name="description_switch_sensitive">显示或隐藏敏感词</string>
    <string name="content_description_avatar">我的头像</string>
    <string name="content_description_friend_avatar">好友头像</string>
    <string name="back">返回上衣页面</string>
    <string name="user_state">用户在线状态</string>
    <string name="select_yunmoji">选择表情</string>
    <string name="edit_my_profile">编辑资料</string>
    <string name="title_activity_group">分组管理</string>
    <string name="contact_friend_list">列表</string>
    <string name="contact_friend_group">分组</string>
    <string name="connection_failed">网络连接失败</string>
    <string name="voice_send_failed">语音发送失败</string>
    <string name="place_holder_image">[图片]</string>
    <string name="label_emotion_analyse">情绪分析得分</string>
    <string name="label_emotion_neutral">Neutral</string>
    <string name="label_drawing">Drawing</string>
    <string name="label_Porn">Porn</string>
    <string name="label_sexy">Sexy</string>
    <string name="label_hentai">Hentai</string>
    <string name="title_pick_group">设置好友分组</string>
    <string name="assign_group_success">设置分组成功</string>
    <string name="no_word_cloud_yet">词云空</string>
    <string name="label_conversation_word_cloud">我们的聊天词云</string>
    <string name="ensure_delete_word_cloud">确认删除该词云吗</string>
    <string name="delete_word_cloud_ok">删除词云成功</string>
    <string name="add_group">添加好友分组</string>
    <string name="add_ok">添加分组成功</string>
    <string name="delete_ok">删除分组成功</string>
    <string name="delete_group">删除该分组</string>
    <string name="ensure_delete">确认删除吗</string>
    <string name="not_assigned_group">未分组</string>
    <string name="qrcode_title">二维码</string>
    <string name="invalid_business_card">无效的名片！</string>
    <string name="voice_duration_text">%02d:%02d</string>
    <string name="voice_button_hint_press">按住说话</string>
    <string name="voice_button_hint_pressed">松开结束</string>
    <string name="delete_voice">删除输入框中即将发送的语音信息</string>
    <string name="scan_qr">扫一扫</string>
    <string name="about_cloud_liter">关于云升</string>
    <string name="discover_friend">发现朋友</string>
    <string name="logout_hint">退出登录后将清除所有本地缓存，确认退出吗?</string>
    <string name="search_hint_word_cloud">按关键词匹配词云…</string>
    <string name="hint_from_your_word_cloud">来自你的词云…</string>
    <string name="change_group_name">修改分组名称</string>
    <string name="rename_ok">重命名成功</string>
    <string name="place_holder_voice">[语音]</string>
    <string name="read">已读</string>
    <string name="word_cloud_place_holder">还没有词云呦</string>
    <string name="label_basic_profile">基本资料</string>
    <string name="label_privacy_settings">隐私设置</string>
    <string name="word_cloud_accessibility">词云隐私</string>
    <string name="word_cloud_private">不展示 不被搜索</string>
    <string name="word_cloud_public">公开 可被搜索</string>
    <string name="delete_text_in_searchview">删除输入内容</string>
    <string name="set_success">设置成功</string>
    <string name="private_word_cloud">私密</string>
    <string name="label_conversation_met">好友建立日期</string>
    <string name="label_conversation_last_chat">最近一次聊天是在</string>
    <string name="label_conversation_since_met">已成为好友</string>
    <string name="days">天</string>
    <string name="word_cloud_locked">词云已上锁</string>
    <string name="delete_word_cloud">删除该词云</string>
    <string name="click_to_log_in">点击登录</string>
    <string name="title_image_detection">云升识图</string>
    <string name="description_image_total_detected">检测到%d个实体</string>
    <string name="description_image_none_detected">没有检测到实体</string>
    <string name="image_detect_item">%s %f</string>
    <string name="description_friends_event">好友关系事件</string>
    <string name="hint_friend_accessibility">对方处于无障碍模式</string>
    <string name="hint_friend_type_visual">对方为视力障碍用户</string>
    <string name="hint_friend_type_hearing">对方为听力障碍用户</string>
    <string name="hint_friend_type_limb">对方为肢体障碍用户</string>
    <string name="hint_vertical_screen">，图片比例较长，建议保持竖屏触摸该图片</string>
    <string name="detect_failed">实体检测失败</string>
    <string name="switch_to_voice">切换到语音消息</string>
    <string name="select_image">发送图片</string>
    <string name="chat_detail_menu">聊天详情菜单</string>
    <string name="switch_to_text">切换到文字输入</string>
    <string name="voice_to_text">语音转文字</string>
    <string name="voice_message">语音消息</string>
    <string name="image_message_description">图片消息，长按进行实体检测</string>
    <string name="image">图片</string>
    <string name="description_text_input">聊天文字输入框</string>
    <string name="description_expand_menu">展开主页抽屉</string>
    <string name="description_search">发现新朋友</string>
    <string name="description_qr">扫描二维码</string>
    <string name="detect_detail">检测详情</string>
    <string name="hint_img_below">图像下方</string>
    <string name="hint_img_upper">图片上方</string>
    <string name="hint_horizontal_screen">，图片比例较宽，建议横屏后触摸该图片</string>
    <string name="sensitive_result">敏感判定</string>
    <string name="title_word_cloud">词云管理</string>
    <string name="accessibility_off">关闭无障碍</string>
    <string name="accessibility_on_public">打开无障碍并公开</string>
    <string name="accessibility_on_private">打开无障碍并对他人隐藏</string>
    <string name="accessibility_type">无障碍类型</string>
    <string name="type_permission_private">仅自己可见</string>
    <string name="type_permission_protected">仅好友可见</string>
    <string name="type_permission_public">所有人可见</string>
    <string name="type_permission">无障碍隐私</string>
    <string name="type">用户类型</string>
    <string name="type_normal">健全</string>
    <string name="type_visual">视力障碍</string>
    <string name="type_hearing">听力障碍</string>
    <string name="type_limb">肢体障碍</string>
    <string name="type_visual_hearing">视力 | 听力障碍</string>
    <string name="type_visual_limb">视力 | 肢体障碍</string>
    <string name="type_hearing_limb">听力 | 肢体障碍</string>
    <string name="type_visual_hearing_limb">视力 | 听力 | 肢体障碍</string>
    <string name="hint_accessibility_sure_to_send_title">是否继续发送?</string>
    <string name="hint_accessibility_sure_to_send_subtitle">对方为无障碍用户，这张图片将被识别为如下所示并通过Talkback反馈给对方，请确保对方能获得清楚的图片描述</string>
    <string name="hint_type_visual_sure_to_send_subtitle">对方为视力障碍用户，这条语音消息将被转化为如下所示的文本消息反馈给对方，请确保对方能获得准确的文本信息</string>
    <string name="scene_classify_result_test">场景推测</string>
    <string name="detect_progressing">正在进行实体检测…</string>
    <string name="scene_progressing">正在进行场景推测…</string>
    <string name="scene_classify_failed">场景推测失败</string>
    <string name="sensitive_progressing">获取敏感判定…</string>
    <string name="title_me">我的</string>
    <string name="my_face_manager">我的人脸</string>
    <string name="upload_success">上传成功</string>
    <string name="add_my_face">新增我的人脸</string>
    <string name="no_face">该图片中没有人脸！</string>
    <string name="delete_face_ok">删除人脸成功</string>
    <string name="delete_face">删除人脸</string>
    <string name="ensure_delete_face">确认删除人脸？</string>
    <string name="accessibility_setting">无障碍</string>
    <string name="privacy_setting">隐私</string>
    <string name="title_scene_gallery">场景相册</string>
    <string name="close_drawer">关闭抽屉</string>
    <string name="cd_image_item">图片对象</string>
    <string name="scene_gallery">场景相册</string>
</resources>