<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top|end"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/fail"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/voice_send_failed"
        app:srcCompat="@android:drawable/stat_sys_warning"
        app:tint="@color/profileOrange" />

    <ImageView
        android:id="@+id/see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginEnd="-16dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/description_switch_sensitive"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:theme="@style/rippleControl"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        app:tint="?attr/colorControlNormal" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="3dp"
        android:alpha="0.6"
        android:text="@string/read"
        android:textSize="10sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/image_message_description"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/friendBubbleColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/image_sensitive"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:transitionName="image"
                app:srcCompat="@drawable/place_holder_sensitive_image" />

            <com.stupidtree.cloudliter.ui.widgets.EmoticonsTextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/hint_sensitive_message"
                android:textColor="?attr/textColorSecondary"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:maxWidth="140dp"
            android:maxHeight="180dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/place_holder_loading" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/content_description_avatar"
        android:src="@drawable/place_holder_avatar" />
</LinearLayout>