<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|start|top"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/content_description_friend_avatar"
        android:src="@drawable/place_holder_avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="8dp"
            android:maxEms="16"
            android:singleLine="true"
            android:text="Im cloud light"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/image_message_description"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/friendBubbleColor"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:maxWidth="140dp"
                android:maxHeight="180dp"
                android:scaleType="centerCrop"
                android:transitionName="image"
                android:visibility="visible"
                app:srcCompat="@drawable/place_holder_loading" />

            <LinearLayout
                android:id="@+id/image_sensitive"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/place_holder_sensitive_image" />

                <com.stupidtree.cloudliter.ui.widgets.EmoticonsTextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/hint_sensitive_message"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="10sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="-16dp"
        android:alpha="0.6"
        android:contentDescription="@string/description_switch_sensitive"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:theme="@style/rippleControl"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        app:tint="?attr/colorControlNormal" />

</LinearLayout>